components/nav/nav.styl
@require 'util'

nav.nav
  background-color $black
  height 4em
  display flex
  justify-content space-around
  position fixed
  top 0
  width 100vw
  z-index 20
  ul
    height 100%
    list-style none
    position absolute
    visible hidden
    z-index 2
  > ul
    display flex
    flex-grow 2
    flex-wrap nowrap
    flex-direction row
    justify-content flex-end
    left 0
    top 0
    padding 0
    position relative
    margin 0
    &:focus
      outline 0
  li
    font-size 1.2em
    height 100%
    display inline-block
    position relative
    vertical-align middle
    zoom 1
    div.nav_underline.active
      height 1px
      border 1px $r3d solid
      bottom 2em
      margin 0 auto
      position relative
      width 75%
    a
      color white
      display block
      line-height 65px
      min-width 90px
      white-space nowrap

      &:hover
        background-color lighten($black, 20%)
    li
      display block

.nav_links

.nav_logo
  flex-grow 1
  flex-basis 0%
  min-width 200px
  text-align center

  div
    display inline-block

  .nav_logo-type
    svg
      height 4em
      width 8em
      fill white
  .nav_logo-mark
    vertical-align top
    svg
      height 3.0em
      width 3.5em
      margin 0.5em 0

.nav_links-hamburger
  padding-top 0.5em
  display none

@media (max-width: 37em)
  .nav_links-hide
    display none !important
  .nav_links-hamburger
    display inline-block
    float right
    height 3em
    svg
      height 3em
      fill white

@import 'sideNav'

